@@ -125,8 +125,11 @@
     - Softcap added in crafting window
     - Updated Calendar to be somewhat better
     - gfx/borka/body sounds only on unknown gobs or "bad" kins. By default bad kin = RED. Can be changed in options -> gameplay
+        - May still hear yourself when loading in the game..
     - Added howl/timer sounds to sounds for Alerting
     - Circle radius no longer is half in the ground
     - Dead animals shouldn't show a ring anymore, if you find one that does ctrl + hover of it and show me the tooltip
     - Added back Shadow quality under Options -> Graphics. Anything under 1024 is basically all shadow. Highest setting
       is near perfect shadows
+    - Changed nightvision -> Custom global light. Added in options to customize the color to your liking. Pure black of
+    everything for maximum larp of course. Default is pure white for the cowards.
